crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__error_missing_form_type.snap
---
source: rust/crates/talkbank-tree-sitter-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: UnparsableContent,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 113,
                        end: 113,
                    },
                    line: None,
                    column: None,
                },
                context: Some(
                    ErrorContext {
                        source_text: "hello@",
                        span: Span {
                            start: 113,
                            end: 113,
                        },
                        expected: [],
                        found: "hello@",
                        line_offset: None,
                    },
                ),
                labels: [],
                message: "Parse error: found end of input expected 'f', 'l', 's', 'w', 'z', 'a', 'b', 'c', 'd', 'g', 'i', 'k', 'n', 'o', 'p', 'q', 't', 'u', or 'x'",
                suggestion: None,
                help_url: Some(
                    "https://talkbank.org/errors/E316",
                ),
            },
        ],
    },
)
