crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__error_unclosed_shortening.snap
---
source: rust/crates/talkbank-tree-sitter-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: UnparsableContent,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 113,
                        end: 113,
                    },
                    line: None,
                    column: None,
                },
                context: Some(
                    ErrorContext {
                        source_text: "hel(lo",
                        span: Span {
                            start: 113,
                            end: 113,
                        },
                        expected: [],
                        found: "hel(lo",
                        line_offset: None,
                    },
                ),
                labels: [],
                message: "Parse error: found end of input expected any, or ')'",
                suggestion: None,
                help_url: Some(
                    "https://talkbank.org/errors/E316",
                ),
            },
        ],
    },
)
