crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__overlap_marker_all_types_excluded.snap
---
source: crates/talkbank-tree-sitter-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 127,
        },
        word_id: None,
        raw_text: "w⌈or⌉d⌊te⌋st",
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "w",
                        ),
                    ),
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: TopOverlapBegin,
                        index: None,
                        span: Some(
                            Span {
                                start: 108,
                                end: 111,
                            },
                        ),
                    },
                ),
                Text(
                    WordText(
                        NonEmptyString(
                            "or",
                        ),
                    ),
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: TopOverlapEnd,
                        index: None,
                        span: Some(
                            Span {
                                start: 113,
                                end: 116,
                            },
                        ),
                    },
                ),
                Text(
                    WordText(
                        NonEmptyString(
                            "d",
                        ),
                    ),
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: BottomOverlapBegin,
                        index: None,
                        span: Some(
                            Span {
                                start: 117,
                                end: 120,
                            },
                        ),
                    },
                ),
                Text(
                    WordText(
                        NonEmptyString(
                            "te",
                        ),
                    ),
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: BottomOverlapEnd,
                        index: None,
                        span: Some(
                            Span {
                                start: 122,
                                end: 125,
                            },
                        ),
                    },
                ),
                Text(
                    WordText(
                        NonEmptyString(
                            "st",
                        ),
                    ),
                ),
            ],
        ),
        category: None,
        form_type: None,
        lang: None,
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                "wordtest",
            ),
        ),
    },
)
