crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__overlap_marker_numbered_excluded.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 0,
            end: 15,
        },
        word_id: None,
        raw_text: "test⌋1⌈2ing",
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "test⌋1⌈2ing",
                        ),
                    ),
                ),
            ],
        ),
        category: None,
        form_type: None,
        lang: None,
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                "test⌋1⌈2ing",
            ),
        ),
    },
)
